<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/track_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/item_element_margin"
        android:contentDescription="@string/default_icon_for_string_channels"
        android:scaleType="fitXY"
        android:src="@drawable/track_icon" />

    <LinearLayout
        android:id="@+id/track_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_element_margin"
        android:layout_marginEnd="@dimen/item_element_margin"
        android:layout_marginTop="@dimen/item_element_margin"
        android:layout_toEndOf="@+id/track_icon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_track_name"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/name_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/track_duration_icon"
                android:layout_width="@dimen/small_icon_width_height"
                android:layout_height="@dimen/small_icon_width_height"
                android:contentDescription="@string/track_duration_item"
                android:src="@android:drawable/presence_away" />

            <TextView
                android:id="@+id/track_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_element_margin"
                android:text="@string/default_track_duration"
                android:textColor="@color/details_text_color" />

            <ImageView
                android:id="@+id/track_likes_icon"
                android:layout_width="@dimen/small_icon_width_height"
                android:layout_height="@dimen/small_icon_width_height"
                android:contentDescription="@string/track_likes_icon"
                android:src="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/track_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_element_margin"
                android:text="@string/default_track_likes" />

            <ImageView
                android:id="@+id/track_plays_icon"
                android:layout_width="@dimen/small_icon_width_height"
                android:layout_height="@dimen/small_icon_width_height"
                android:contentDescription="@string/track_plays_item"
                android:src="@android:drawable/ic_media_play" />

            <TextView
                android:id="@+id/track_plays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_element_margin"
                android:text="@string/default_track_plays" />

            <ImageView
                android:id="@+id/track_created_icon"
                android:layout_width="@dimen/small_icon_width_height"
                android:layout_height="@dimen/small_icon_width_height"
                android:contentDescription="@string/track_plays_item"
                android:src="@android:drawable/ic_menu_day" />

            <TextView
                android:id="@+id/track_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_track_created" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>