<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.devpodcasts.controllers.activities.ChannelsActivity">

    <LinearLayout
        android:id="@+id/channel_detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_element_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/channel_detail_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_icon_for_string_channels"
            app:srcCompat="@drawable/channel_icon" />

        <TextView
            android:id="@+id/channel_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_element_margin"
            android:text="@string/default_channel_name"
            android:textAlignment="center"
            android:textSize="@dimen/name_size" />

        <TextView
            android:id="@+id/channel_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_element_margin"
            android:text="@string/default_channel_description" />

        <RatingBar
            android:id="@+id/channel_detail_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:progress="5"
            android:rating="5"
            android:requiresFadingEdge="none"
            android:stepSize="0.1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/item_element_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/channel_detail_itunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/button_itunes"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/itunes_icon" />

            <ImageView
                android:id="@+id/channel_detail_soundcloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/button_soundcloud"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/soundcloud_icon" />

            <ImageView
                android:id="@+id/channel_detail_podster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/button_podster"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/podster_icon" />

            <ImageView
                android:id="@+id/channel_detail_googleplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/button_googleplay"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/googleplay_icon" />

            <ImageView
                android:id="@+id/channel_detail_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/button_site"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/site_icon" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/tracks_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/channel_detail_info">

    </ListView>

</RelativeLayout>

